# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "aleopy"
version = "0.10.0"
homepage = "https://github.com/ungaro/leo-python"
repository = "https://github.com/ungaro/leo-python"
authors = ["Alp Guneysel"]
description = "Python bindings for Aleo & Leo"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.63"

[package.metadata.maturin]
name = "aleo._internal"

[features]
default = ["mimalloc"]

[dependencies]
async-trait = "0.1"
leo-lang = "1.7.0"
aleo-rust = "0.4.1"
env_logger = "0.10.0"
futures = "0.3"
log = "0.4.17"
mimalloc = { version = "*", optional = true, default-features = false }
pyo3 = { version = "0.18", features = ["extension-module", "abi3", "abi3-py37"] }
rand = "0.8.5"
bech32 = "0.9.1"
serde_json = { version = "1.0.85", features = ["std"] }
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }
uuid = { version = "1.3.2", features = ["v4"] }

[dependencies.snarkvm]
version = "0.11.1"

[dependencies.snarkvm-algorithms]
version = "0.11.1"

[dependencies.snarkvm-curves]
version = "0.11.1"

[dependencies.snarkvm-console-program]
version = "0.11.1"

[build-dependencies]
pyo3-build-config = "0.18.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "aleopy"

[profile.release]
codegen-units = 1
lto = true
